// Copyright (c) 2020 Uber Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package uber.cadence.api.v1;

option go_package = "github.com/uber/cadence/.gen/proto/api/v1";
option java_multiple_files = true;
option java_outer_classname = "ApiProto";
option java_package = "com.uber.cadence.api.v1";

import "google/protobuf/timestamp.proto";
import "uber/cadence/api/v1/workflow.proto";

message WorkflowExecutionFilter {
  string workflow_id = 1;
  string run_id = 2;
}

message WorkflowTypeFilter {
  string name = 1;
}

message StartTimeFilter {
  google.protobuf.Timestamp earliest_time = 1;
  google.protobuf.Timestamp latest_time = 2;
}

message StatusFilter {
  WorkflowExecutionCloseStatus status = 1;
}

enum IndexedValueType {
  INDEXED_VALUE_TYPE_INVALID = 0;
  INDEXED_VALUE_TYPE_STRING = 1;
  INDEXED_VALUE_TYPE_KEYWORD = 2;
  INDEXED_VALUE_TYPE_INT = 3;
  INDEXED_VALUE_TYPE_DOUBLE = 4;
  INDEXED_VALUE_TYPE_BOOL = 5;
  INDEXED_VALUE_TYPE_DATETIME = 6;
}
